# smart-ring-digital-twin

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index.html
app/: demo_main.c
docs/: part1-architecture.md  part3-debugging.md
firmware/nrf54l15/: Makefile  README.md  nrf54l15.ld
firmware/nrf54l15/shim/: string.h
firmware/nrf54l15/src/: board.c  board.h  libc_shim.c  main.c  nrf54l15.h  sm_port_nrf54l15.c  startup.c
firmware/zephyr/: CMakeLists.txt  ble.conf  prj.conf
firmware/zephyr/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
firmware/zephyr/src/: ble.c  ble.h  main.c  sensors.c  sensors.h
src/: ble_batch.c  ble_batch.h  sensor_manager.c  sensor_manager.h  sensor_sim.c  sensor_sim.h  sm_port.h  sm_ringbuf.c  sm_ringbuf.h
src/port/: sm_port_none.c  sm_port_posix.c  sm_port_zephyr.c
tests/: test_ble_batch.c  test_concurrency.c  test_harness.h  test_ringbuf.c  test_sensor_manager.c
tests/ztest/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/ztest/src/: test_ble_batch.c  test_concurrency.c  test_ringbuf.c  test_sensor_manager.c
